force-app/main/default/objects/Collection_Waypoints__c/Collection_Waypoints__c.object-meta.xml
<CustomObject>
    <label>Collection Waypoint</label>
    <nameField>
        <label>Collection Waypoints Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Waypoint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>