force-app/main/default/objects/Collection_Waypoints__c/fields/Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>Account_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Discount</label>
    <referenceTo>Account_Discount__c</referenceTo>
    <relationshipLabel>Collection Waypoint</relationshipLabel>
    <relationshipName>Collection_Waypoint</relationshipName>
    <type>Lookup</type>
</CustomField>