force-app/main/default/objects/Collection_Waypoints__c/fields/Billing_Lat__c.field-meta.xml
<CustomField>
    <fullName>Billing_Lat__c</fullName>
    <formula>Location__r.BillingLatitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Lat</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>