force-app/main/default/objects/Collection_Waypoints__c/fields/Billing_Long__c.field-meta.xml
<CustomField>
    <fullName>Billing_Long__c</fullName>
    <formula>Location__r.BillingLongitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Long</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>