force-app/main/default/objects/Collection_Waypoints__c/fields/BinKey__c.field-meta.xml
<CustomField>
    <fullName>BinKey__c</fullName>
    <label>Bin Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>