force-app/main/default/objects/Collection_Waypoints__c/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <formula>Case__r.Subject</formula>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>