force-app/main/default/objects/Collection_Waypoints__c/fields/Collected_at__c.field-meta.xml
<CustomField>
    <fullName>Collected_at__c</fullName>
    <label>Collected at (Don&apos;t Use Me)</label>
    <type>DateTime</type>
</CustomField>