force-app/main/default/objects/Collection_Waypoints__c/fields/Collection_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Collection_Quantity__c</fullName>
    <label>Collection Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>