force-app/main/default/objects/Collection_Waypoints__c/fields/Collection_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Collection_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Collection Waypoint</relationshipLabel>
    <relationshipName>Collection_Waypoint</relationshipName>
    <type>Lookup</type>
</CustomField>