force-app/main/default/objects/Collection_Waypoints__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <formula>TEXT(Supplier_Product__r.Product__r.Container_Type__r.Type__c)</formula>
    <label>Container</label>
    <type>Text</type>
</CustomField>