force-app/main/default/objects/Collection_Waypoints__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <formula>DATETIMEVALUE(
  /* build an ISO datetime string */
  TEXT(  Daily_Dispatch__r.Dispatch_Date__c  )
  &amp; &quot; &quot;
  /* if you only have “HH:MM”, append “:00” for the seconds */
  &amp; IF(
      CONTAINS(  Collection_Schedule__r.Time__c , &quot;:&quot; ),
      /* has “:”, assume “HH:MM” or “HH:MM:SS” */
      IF(
        LEN( Collection_Schedule__r.Time__c ) = 5,
        /* “HH:MM” → add “:00” */
        Collection_Schedule__r.Time__c &amp; &quot;:00&quot;,
        /* already “HH:MM:SS” */
        Collection_Schedule__r.Time__c
      ),
      /* no “:”, treat whole text as hour */
      LPAD( Collection_Schedule__r.Time__c, 2 , &quot;0&quot; ) &amp; &quot;:00:00&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Put Out Date Time</label>
    <type>DateTime</type>
</CustomField>