force-app/main/default/objects/Collection_Waypoints__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>Location__r.Parent.OwningEntity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity</label>
    <type>Text</type>
</CustomField>