force-app/main/default/objects/Collection_Waypoints__c/fields/ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID case safe</label>
    <type>Text</type>
</CustomField>