force-app/main/default/objects/Collection_Waypoints__c/fields/Is_bin_collection__c.field-meta.xml
<CustomField>
    <fullName>Is_bin_collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is bin collection?</label>
    <type>Checkbox</type>
</CustomField>