force-app/main/default/objects/Collection_Waypoints__c/fields/Location_Priority__c.field-meta.xml
<CustomField>
    <fullName>Location_Priority__c</fullName>
    <formula>IF(Location__r.VIP_Customer__c, &quot;P1&quot;, IF(Location__r.On_Priority__c, &quot;P2&quot;, &quot;P3&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Priority</label>
    <type>Text</type>
</CustomField>