force-app/main/default/objects/Collection_Waypoints__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <formula>Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>