force-app/main/default/objects/Collection_Waypoints__c/fields/Manual_Price__c.field-meta.xml
<CustomField>
    <fullName>Manual_Price__c</fullName>
    <label>Manual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>