force-app/main/default/objects/Collection_Waypoints__c/fields/MissedCollection__c.field-meta.xml
<CustomField>
    <fullName>MissedCollection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missed Collection</label>
    <referenceTo>Missed_Collection__c</referenceTo>
    <relationshipLabel>Collection Waypoint</relationshipLabel>
    <relationshipName>CollectionWaypoint</relationshipName>
    <type>Lookup</type>
</CustomField>