force-app/main/default/objects/Collection_Waypoints__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <formula>Location__r.BillingPostalCode</formula>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>