force-app/main/default/objects/Collection_Waypoints__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Lot</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>