force-app/main/default/objects/Collection_Waypoints__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Collection Waypoint</relationshipLabel>
    <relationshipName>Collection_Waypoint</relationshipName>
    <type>Lookup</type>
</CustomField>