force-app/main/default/objects/Collection_Waypoints__c/fields/ScheduledDispatch__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDispatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Dispatch</label>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Scheduled Dispatch Waypoint</relationshipLabel>
    <relationshipName>ScheduledDispatchWaypoint</relationshipName>
    <type>Lookup</type>
</CustomField>