force-app/main/default/objects/Collection_Waypoints__c/fields/Supplier_product_name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_product_name__c</fullName>
    <formula>Supplier_Product__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier product name</label>
    <type>Text</type>
</CustomField>