force-app/main/default/objects/Collection_Waypoints__c/fields/SupplierPO__c.field-meta.xml
<CustomField>
    <fullName>SupplierPO__c</fullName>
    <formula>Collection_Schedule__r.Po_Number_Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SupplierPO</label>
    <type>Text</type>
</CustomField>