force-app/main/default/objects/Collection_Waypoints__c/fields/VisitedAt__c.field-meta.xml
<CustomField>
    <fullName>VisitedAt__c</fullName>
    <formula>DispatchLocation__r.SubmittedAt__c</formula>
    <label>Visited At</label>
    <type>DateTime</type>
</CustomField>